✨ feat(courses): add CourseStatus enum and update model
Introduce CourseStatus enum to manage course states and update Course model to include status field. Enhance admin parameters for better course management.

--- a/frontend/public/assets/css/main.css
+++ b/frontend/public/assets/css/main.css
@@ -16529,7 +16529,7 @@ table.table th {
     padding: 25px;
     font-size: 16px;
     line-height: 1;
-    color: var(--color-purple-1);
+    /* color: var(--color-purple-1); */
     font-weight: 500;
 }
 
