feat(user, course): enhance user and course interfaces
- Added 'username' field to User interface.
- Introduced optional 'lessons_count' field in Course interface.
- Updated user info retrieval to include new fields.
- Adjusted course listing and user profile components to accommodate changes.

--- a/frontend/public/assets/css/main.css
+++ b/frontend/public/assets/css/main.css
@@ -16715,3 +16715,25 @@ table.table td {
 .will-learn ul li, .requirements ul li {
     list-style: disc !important;
 }
+
+.course-price {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.course-price > div:nth-child(1) {
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 500;
+    margin-right: 10px;
+    color: var(--color-light-1);
+    text-decoration: line-through;
+}
+
+.course-price > div:nth-child(2) {
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 500;
+    color: var(--color-dark-1);
+}
