--- a/frontend/public/assets/css/main.css
+++ b/frontend/public/assets/css/main.css
@@ -16755,3 +16755,16 @@ footer.-type-5 {
     min-width: 24px;
     min-height: 24px;
 }
+
+.spinner {
+    animation: spin 1s linear infinite;
+    margin-right: 0.75rem;
+    height: 1.25rem;
+    width: 1.25rem;
+    color: white;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
